--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
 
         <activity android:name=".CameraActivity"></activity>
+        <activity android:name=".PreviewImageActivity" />
     </application>
 
 </manifest>
