--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.loopj.android:android-async-http:1.4.9'
     implementation 'com.squareup.okhttp3:okhttp:3.8.0'
+    implementation 'me.relex:circleindicator:1.2.2'
 }
